# CUDA-GEMM-Optimization

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backup/: README.md  gemm.cu  tc.cu  wmma.cu  wmma_2.cu
docker/: gemm-cuda.Dockerfile
examples/: CMakeLists.txt  README.md  profile_cuda_gemm.cpp  profile_cuda_gemm.cu
include/: cuda_gemm.hpp  cuda_gemm_utils.cuh  cuda_gemm_utils.hpp  profile_utils.cuh
src/: 00_non_coalesced_global_memory_access.cpp  00_non_coalesced_global_memory_access.cu  01_coalesced_global_memory_access.cu  01_non_coalesced_global_memory_access.cu  02_2d_block_tiling.cu  02_2d_block_tiling_vectorized_memory_access.cu  02_shared_memory_cache.cu  03_2d_block_tiling_1d_thread_tiling.cu  03_2d_block_tiling_1d_thread_tiling_vectorized_memory_access.cu  04_2d_block_tiling_2d_thread_tiling.cu  04_2d_block_tiling_2d_thread_tiling_vectorized_memory_access.cu  05_2d_block_tiling_2d_thread_tiling_matrix_transpose.cu  05_2d_block_tiling_2d_thread_tiling_matrix_transpose_vectorized_memory_access.cu  05_2d_block_tiling_2d_thread_tiling_vectorized_memory_access.cu  06_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose.cu  06_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose_vectorized_memory_access.cu  06_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose_vectorized_memory_access_double_buffered.cu  06_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose_vectorized_memory_access_double_buffered.cu.bak  07_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose_wmma.cu  07_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose_wmma_vectorized_memory_access.cu  07_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose_wmma_vectorized_memory_access_double_buffered.cu  08_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose_double_buffering.cu  08_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose_vectorized_memory_access_double_buffering.cu  CMakeLists.txt  cuda_gemm_utils.cu  profile_cuda_gemm.cu  profile_cuda_gemm_fp16.cu  profile_cuda_gemm_fp32.cu
